oxiplate-derive/tests/broken/char/multiple-chars-eof.stderr
error: Expected `'`.
 --> tests/broken/char/multiple-chars-eof.rs:4:26
  |
4 | #[oxiplate_inline(r"{{ 'hello")]
  |                          ^^^^
